🛠️ RFC 7807 Problem Details Standardı ile Hata Yanıtlarını Tek Bir Çatı Altında Topladım 🎯
Mevcut hata yanıt yapısını yalnızca çalışır durumda bırakmak yerine, uzun vadede sürdürülebilir ve standartlarla uyumlu olacak şekilde baştan ele aldım. 🚀 RFC 7807 Problem Details standardını temel alarak tüm HTTP hata cevaplarını ortak bir dile kavuşturdum, 🧩 doğrulama ve iş kuralı ihlallerini kendi sorumluluklarına ayıran yeni problem modellerini tasarladım. 📚 Hata tiplerini merkezi bir enum altında toplayarak dağınıklığı ortadan kaldırdım, 🔗 GlobalExceptionHandler katmanını yeni mimariye uyarlayarak tüm exception dönüşlerini tutarlı hale getirdim. ⚙️ Mevcut exception hiyerarşisine dokunmadan yalnızca sunulan HTTP yanıt formatını standardize ederek hem API tüketicileri için daha öngörülebilir bir yapı oluşturdum hem de gelecekte eklenecek hata senaryolarının sisteme minimum maliyetle entegre edilebilmesini sağladım. ✨